Update styles.css to fix UX issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 .container {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
     max-width: 600px;
     margin: auto;
@@ -55,6 +55,7 @@ input {
     box-shadow: inset 4px 4px 8px rgba(18, 34, 54, 0.1), inset -4px -4px 8px rgba(255, 255, 255, 0.8);
     font-size: 1rem; /* Utilisation de rem pour la taille de la police */
     max-width: 100%; /* Ajout de cette ligne pour assurer la largeur maximale sur mobile */
+    height: auto;
 }
 
 #send-button {
